[project]
name = "kcwater"
version = "0.1.0"
description = "A utility that reads water utility meter data from kcwater.com"
authors = [{ name = "Michael Holtzscher", email = "michael@holtzscher.com" }]
readme = "README.md"
keywords = ["kcwater", "api", "utilities", "kansas-city"]
requires-python = ">=3.12"
dependencies = ["aiohttp (>=3.11.11,<4.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
